--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.0.5",
+    "@angular/cdk": "^12.2.4",
     "@angular/common": "~12.0.4",
     "@angular/compiler": "~12.0.4",
     "@angular/core": "~12.0.4",
     "@angular/forms": "~12.0.4",
+    "@angular/material": "^12.2.4",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "ngx-file-drag-drop": "^5.1.2",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
